# larnest

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  LArNESTFluctuationBenchmarks.cxx  LArNESTMeanYieldsBenchmarks.cxx
cmake/cuda/: FindCUDALibs.cmake  protect_pthread_flag.cmake
fcl/: IonAndScint_dune.fcl
include/: LArNEST.h  LArParameters.h  Logger.h  RandomGen.h
larsoft/: CMakeLists.txt  Configuration.h  ISCalcAna_module.cc  ISCalcNESTLAr.cxx  ISCalcNESTLAr.h  IonAndScint_module.cc
src/: LArNEST.cu  LArNEST.cxx  Logger.cxx  RandomGen.cxx
utils/: lar_dataset.py  plot_benchmarks.py  utils.py
